Add anisotropic scale factors
Only to the Euclidean distance between two positions;
Not to the velocity or potential

--- a/Makefile.config
+++ b/Makefile.config
@@ -8,8 +8,8 @@
 # (define your own, if needed!)                                    #
 #------------------------------------------------------------------#
 #SYSTEM =	"Standard SQL"
-SYSTEM =	"Standard OpenMP"
-#SYSTEM =	"Standard MPI"
+#SYSTEM =	"Standard OpenMP"
+SYSTEM =	"Standard MPI"
 #SYSTEM =	"Standard MPI+OpenMP"
 #SYSTEM =	"SuperMUC"
 #SYSTEM =	"Debug"
@@ -21,7 +21,7 @@ SYSTEM =	"Standard OpenMP"
 # NOTE: ALWAYS CHECK WHICH FLAGS HAVE BEEN SET IN define.h
 #
 #-------------------------------------------------------------------
-DEFINEFLAGS	= 	
+DEFINEFLAGS	=
 
 # nIFTy cosmology
 #=================
@@ -89,7 +89,7 @@ DEFINEFLAGS	=
 
 # simuCroCo tests
 #-----------------
-#DEFINEFLAGS	=	-DGADGET 
+#DEFINEFLAGS	=	-DGADGET
 
 # sigmaH flags for Jubilee H0voids project
 #------------------------------------------
@@ -108,7 +108,7 @@ DEFINEFLAGS	=
 #---------------------------------
 #DEFINEFLAGS	=	-DGADGET -DMULTIMASS -DGAS_PARTICLES -DGINNUNGAGAP -DLGADGET
 
-# GIZMO 
+# GIZMO
 #-------
 #DEFINEFLAGS     =       -DMULTIMASS -DGAS_PARTICLES -DWITH_HDF5 -DSUSSING2013 -DAHFexciseSubhaloStars -DMETALHACK
 
@@ -119,26 +119,26 @@ DEFINEFLAGS	=
 #------------------------------------------------------------------#
 # Set environment for the system                                   #
 #------------------------------------------------------------------#
-LIB_HDF5	=	-L/Users/aknebe/bin/hdf5/lib -lhdf5
-INC_HDF5	=	-I/Users/aknebe/bin/hdf5/include -DH5_USE_16_API
+LIB_HDF5 =
+INC_HDF5 =
 
 ifeq ($(SYSTEM), "Standard SQL")
 	CC         	=	gcc -std=c99 -fopenmp
 	FC 	      	=	gfortran
 	OPTIMIZE	=	-O2
-	CCFLAGS		=	
-	LNFLAGS		=	-lsqlite3 
+	CCFLAGS		=
+	LNFLAGS		=	-lsqlite3
 	DEFINEFLAGS	+=	-DWITH_OPENMP -DAHF_SQL
 	MAKE		=	make
 endif
 
 ifeq ($(SYSTEM), "Standard OpenMP")
-	CC         	=	gcc -std=c99 -fopenmp 
+	CC         	=	gcc -std=c99 -fopenmp
 	FC 	      	=	gfortran
 	OPTIMIZE	=	-O2
-	CCFLAGS		=	
-	LNFLAGS		=	 
-	DEFINEFLAGS	+=	-DWITH_OPENMP 
+	CCFLAGS		=
+	LNFLAGS		=
+	DEFINEFLAGS	+=	-DWITH_OPENMP
 	MAKE		=	make
 endif
 
@@ -146,13 +146,13 @@ ifeq ($(SYSTEM), "Standard Serial")
 	CC              =       gcc -std=c99 -g -fopenmp
 	FC              =       gfortran
 	OPTIMIZE        =       -O2
-	CCFLAGS         =       
-	LNFLAGS         =	
+	CCFLAGS         =
+	LNFLAGS         =
 	MAKE            =       make
 endif
 
 ifeq ($(SYSTEM), "Standard MPI")
-	CC         	=	mpicc -std=c99 -Wall -W -fopenmp
+	CC         	=	mpicc -std=c99 -Wall -W
 	FC         	=	mpif90
 	OPTIMIZE	=	-O2
 	CCFLAGS         =       ${INC_HDF5}
@@ -166,7 +166,7 @@ ifeq ($(SYSTEM), "Standard MPI+OpenMP")
 	FC         	=	g77
 	OPTIMIZE	=	-O2
 	CCFLAGS         =       ${INC_HDF5}
-	LNFLAGS         =       ${LIB_HDF5} 
+	LNFLAGS         =       ${LIB_HDF5}
 
 	DEFINEFLAGS	+=	-DWITH_MPI -DWITH_OPENMP
 	MAKE		=	make
@@ -175,7 +175,7 @@ endif
 ifeq ($(SYSTEM), "SuperMUC")
 	CC	        =       mpicc -compiler gcc -m64 -mcmodel=large -std=c99 -Wall -W -fopenmp
 	FC       	=	g77
-	OPTIMIZE	=	-O2 
+	OPTIMIZE	=	-O2
 	CCFLAGS         =       ${INC_HDF5}
 	LNFLAGS         =       ${LIB_HDF5}
 	DEFINEFLAGS	+=	-DWITH_MPI -DWITH_OPENMP
@@ -185,11 +185,11 @@ endif
 ifeq ($(SYSTEM), "Debug")
 	CC         	=	gcc -std=c99 -g -fopenmp
 	FC 	      	=	g95
-	OPTIMIZE	=	-O2 
-	CCFLAGS		=	-g 
+	OPTIMIZE	=	-O2
+	CCFLAGS		=	-g
 #Compile and link with -pg flag for Gprof
 	CCFLAGS		+=	-pg
 	LNFLAGS		=	-pg
-	DEFINEFLAGS	+=	
+	DEFINEFLAGS	+=
 	MAKE		=	make
 endif
